--- a/MyApplication/app/src/main/res/values/strings.xml
+++ b/MyApplication/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="tab_task">任务</string>
     <string name="tab_me">我的</string>
 
+    <string name="more">更多</string>
+    <string name="begin_learn">开始学习</string>
+
 </resources>
