1.首页完善；2.学习页

--- a/MyApplication/app/src/main/res/values/strings.xml
+++ b/MyApplication/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="more">更多</string>
     <string name="begin_learn">开始学习</string>
 
+    <string name="title_news">最新资讯</string>
+
 </resources>
