--- a/MyApplication/app/src/main/res/values/strings.xml
+++ b/MyApplication/app/src/main/res/values/strings.xml
@@ -10,6 +10,11 @@
     <string name="alt_ensure">确定</string>
     <string name="alt_continue">继续</string>
 
+    <!-- 启动-->
+    <string name="splash_enter">开始</string>
+
+
+    <!-- 首页-->
     <string name="tab_homepage">首页</string>
     <string name="tab_learning">学习</string>
     <string name="tab_task">任务</string>
@@ -48,6 +53,14 @@
     <!-- 组织机构选择-->
     <string name="tips_organ_select_1">您的账户属于多个机构</string>
     <string name="tips_organ_select_2">请选择要进入的机构</string>
+
+    <!--版本更新-->
+    <string name="update_dialog_title">发现新版本%s</string>
+    <string name="app_updating">版本更新</string>
+    <string name="update_btn">立即更新</string>
+    <string name="update_cancel">稍候再说</string>
+    <string name="prompt_is_new_version">当前已是最新版本!</string>
+    <string name="update_exception">检测版本更新失败,请重新检测!</string>
 
     
 
