--- a/MyApplication/app/src/main/res/values/strings.xml
+++ b/MyApplication/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">GeApp</string>
-    <string name="app_version">1.0.0</string>
+    <string name="app_version">1.0.1</string>
 
     <!-- 常用错误提示-->
     <string name="errmsg_network_unavailable">网络不可用</string>
@@ -90,7 +90,10 @@
     <string name="entry_course_classify">课程分类</string>
 
     <!-- 学习路径-->
+    <string name="format_deadline_time">截止时间: %s</string>
     <string name="title_learning_path">学习路径</string>
+    <string name="format_total_progress">总进度:%d</string>
+    <string name="format_progress">进度:%d</string>
 
     <!--榜单 -->
     <string name="title_rank">榜单</string>
@@ -115,5 +118,7 @@
     <string name="like_count">点赞课程次数</string>
     <string name="comment_count">评论数</string>
     <string name="share">分享</string>
+
+
 
 </resources>
