--- a/MyApplication/app/src/main/res/values/strings.xml
+++ b/MyApplication/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">GeApp</string>
-    <string name="app_version">1.0.1</string>
+    <string name="app_name">GE</string>
+    <string name="app_version">1.1.0.1</string>
 
     <!-- 常用错误提示-->
     <string name="errmsg_network_unavailable">网络不可用</string>
