课程作者与进度

--- a/MyApplication/app/src/main/res/values/strings.xml
+++ b/MyApplication/app/src/main/res/values/strings.xml
@@ -92,8 +92,9 @@
     <!-- 学习路径-->
     <string name="format_deadline_time">截止时间: %s</string>
     <string name="title_learning_path">学习路径</string>
-    <string name="format_total_progress">总进度:%d</string>
+    <string name="format_total_progress">总进度:%s</string>
     <string name="format_progress">进度:%d</string>
+    <string name="format_auth">作者:%s</string>
 
     <!--榜单 -->
     <string name="title_rank">榜单</string>
