课程进度为0灰层覆盖，不为0灰层覆盖隐藏

--- a/MyApplication/app/src/main/res/values/strings.xml
+++ b/MyApplication/app/src/main/res/values/strings.xml
@@ -123,6 +123,8 @@
     <!-- 任务-->
     <string name="format_progress_complete">已完成%d</string>
 
+    <string name="un_start">未开始</string>
+
 
 
 </resources>
