--- a/MyApplication/app/src/main/res/values/strings.xml
+++ b/MyApplication/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">GE</string>
-    <string name="app_version">3.2.6</string>
+    <string name="app_version">3.4.0.1</string>
 
     <!-- 常用错误提示-->
     <string name="errmsg_network_unavailable">网络不可用</string>
@@ -134,5 +134,7 @@
 
     <string name="version_about">版本号： %s</string>
     <string name="version_about_test">版本号： %s test</string>
+
+    <string name="title_news_list">资讯</string>
 
 </resources>
