--- a/MyApplication/app/src/main/res/values-en/strings.xml
+++ b/MyApplication/app/src/main/res/values-en/strings.xml
@@ -1,6 +1,6 @@
 ﻿<resources>
     <string name="app_name">GE</string>
-    <string name="app_version">3.5.0.1</string>
+    <string name="app_version">3.5.0.2</string>
 
     <!-- Common Error-->
     <string name="errmsg_network_unavailable">Network Unavilable</string>
@@ -205,4 +205,5 @@
     <string name="obtain_verify">获取验证码</string>
 
     <string name="hint_verification_code">请输入验证码</string>
+    <string name="toast_success_edt_user_info">修改成功~</string>
 </resources>
