增加mob微信分享

--- a/MyApplication/app/src/main/res/values-en/strings.xml
+++ b/MyApplication/app/src/main/res/values-en/strings.xml
@@ -206,4 +206,13 @@
 
     <string name="hint_verification_code">请输入验证码</string>
     <string name="toast_success_edt_user_info">修改成功~</string>
+
+    <!-- 我的荣誉-->
+    <string name="medal_for_testing">测试达人勋章</string>
+    <string name="medal_for_learning">学习达人勋章</string>
+    <string name="format_badges_num">(已获得%d枚)</string>
+    <string name="format_medal_num">(已获得%d枚)</string>
+
+    <string name="format_rank">第%d名</string>
+    <string name="points_rule">积分规则</string>
 </resources>
