--- a/MyApplication/app/src/main/res/values-en/strings.xml
+++ b/MyApplication/app/src/main/res/values-en/strings.xml
@@ -1,6 +1,6 @@
 ﻿<resources>
     <string name="app_name">GE</string>
-    <string name="app_version">3.5.0.3</string>
+    <string name="app_version">3.5.0.4</string>
 
     <!-- Common Error-->
     <string name="errmsg_network_unavailable">Network Unavilable</string>
@@ -208,6 +208,7 @@
     <string name="toast_success_edt_user_info">修改成功~</string>
 
     <!-- 我的荣誉-->
+    <string name="title_my_honor">我的荣誉</string>
     <string name="medal_for_testing">测试达人勋章</string>
     <string name="medal_for_learning">学习达人勋章</string>
     <string name="format_badges_num">(已获得%d枚)</string>
