--- a/MyApplication/app/src/main/res/values/strings.xml
+++ b/MyApplication/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">GE</string>
+    <string name="app_name">GoElite</string>
     <string name="app_version">3.5.0</string>
 
     <!-- 常用错误提示-->
